fixed the category display on mobile along changing the custom fields for video to vimeo ID instead of uploading to the server

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -176,9 +176,27 @@
     .homepage_lineArt__bottom {
         display: none;
     }
+
+    #singleHero {
+        height: 30vh;
+    }
 }
 
-@media (max-width: 400px) {
-    .owl-item {
+@media (min-width: 448px) and (max-width: 620px) {
+    #singleHero {
+        margin-bottom: 5rem;
+    }
+}
+
+@media (min-width: 620px) and (max-width: 700px) {
+    #singleHero {
+        margin-bottom: 7rem;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 850px) {
+    #singleHero {
+        height: 30vh;
+        margin-bottom: 12rem;
     }
 }
