--- a/src/app.scss
+++ b/src/app.scss
@@ -75,6 +75,28 @@ video {
     -moz-box-shadow: -1px 14px 59px 3px rgba(0,0,0,0.85);
   }
 
+  .embed-container {
+    padding-bottom: 56.25%;
+    position: absolute;
+    right: 0;
+    height: 80%;
+    width: 100%;
+    top: -5%;
+  }
+  
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    position: absolute;
+    top: -5%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: -1px 14px 59px 3px rgba(0,0,0,0.85);
+    -webkit-box-shadow: -1px 14px 59px 3px rgba(0,0,0,0.85);
+    -moz-box-shadow: -1px 14px 59px 3px rgba(0,0,0,0.85);
+  }
+
   .headerGrid {
     width: auto;
     position: relative;
@@ -541,6 +563,14 @@ a.cat-list_item.active {
   display: none !important;
 }
 
+.footer_getInTouch_button {
+  margin-top: 28px !important;
+}
+
+.projectCard_title__carousel {
+  line-height: 24px;
+  width: 90%;
+}
 
 @media (max-width: 1025px) {
   .homepage_lineArt__top {
@@ -629,3 +659,10 @@ a.cat-list_item.active {
     right: -50%;
   }
 }
+
+@media (min-width: 1025px) and (max-width: 1444px) {
+  #singleHero {
+    height: 85vh;
+  }
+}
+
